# claude-code-plugins

./: .env.example  CHANGELOG.md  README.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/: .env.example  .gitignore  .mcp.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LIMITS.md  Makefile  README.md  STATUS.md  pyproject.toml  workflow.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/.claude-plugin/: marketplace.json  plugin.json
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/docs/: README.md  aidpf-error-codes.md  content_pack_execution.md  diagnostic-artifact-contract.md  mart_overlay_authoring.md  oac_mcp_setup.md  oac_rest_api_setup.md  oac_workbook_authoring_e2e.md  project_setup.md  rest_dispatch_setup.md  v2-medallion-author-skill.md  v2-phase-3-variation-catalog.md  v2-phase-4-multi-tenant-coverage.md  v2-phase-4-preflight-coverage.md  v2-phase-4-shipready-report.md  v2-phase-5-shipready-report.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/docs/adr/: 0020-cluster-side-bootstrap-probe-split.md  0021-pack-as-registry.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/docs/features/: README.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/: README.md  fusion-finance-starter.yaml  minimal_gl_only.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/full-finance-starter/: bundle.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/minimal-bundle/: README.md  aidp.config.yaml  bundle.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/overlay-pack/: README.md  pack.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/profiles/: finance-default.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/notebooks/: run_orchestrator.ipynb
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/overlays/fusion-finance-ar-ext/: pack.yaml
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/scripts/: docs_check.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/scripts/dev/: transcribe_v1_registry.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/scripts/oracle_ai_data_platform_fusion_bundle/: cli.py  dashboard.schema.json  node.schema.json  pack.schema.json
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-autopilot/: SKILL.md  write_resume_checkpoint.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-bootstrap/: SKILL.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-bundle/: SKILL.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-config/: SKILL.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-incremental/: SKILL.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-seed/: SKILL.md  guard.py  intent.py  preconditions.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-fusion-status/: SKILL.md  status_report.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidp-rest/: SKILL.md  client.py
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/aidpf-error-triage/: SKILL.md
claude-code-plugins/oracle-ai-data-platform-fusion-bundle/skills/fusion-drift-doctor/: SKILL.md  drift_classify.py
(+445 files in other folders)
