[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-ai-data-platform-fusion-bundle"
version = "0.1.0a0"
description = "Productized Fusion ERP/HCM/SCM → Oracle AI Data Platform pipeline with curated BICC extracts, medallion bronze/silver/gold in Delta, conformed dimensions, gold marts, and MCP-native Oracle Analytics Cloud workbook authoring."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Ahmed Awan" }
]
keywords = [
  "oracle", "aidp", "fusion", "bicc", "lakehouse", "delta",
  "medallion", "oac", "oracle-analytics-cloud", "mcp", "spark"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "click>=8.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "oci>=2.130",
  "rich>=13.0",
  # P1.5ε — `aidp-fusion-bundle run` (no --inline) shells out to
  # `python -m build` to materialize the plugin wheel for cluster-side
  # install. The build backend MUST be available at runtime, not just
  # in dev extras — operators install via `pip install
  # oracle-ai-data-platform-fusion-bundle` and expect dispatch to work
  # without separately installing the dev tooling.
  "build>=1.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2",
  "responses>=0.25"
]
dev = [
  "ruff>=0.4",
  "mypy>=1.8",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/ahmedawan-oracle/claude-code-plugins"
Repository = "https://github.com/ahmedawan-oracle/claude-code-plugins"
Issues = "https://github.com/ahmedawan-oracle/claude-code-plugins/issues"

[project.scripts]
aidp-fusion-bundle = "oracle_ai_data_platform_fusion_bundle.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["oracle_ai_data_platform_fusion_bundle*"]

[tool.setuptools.package-data]
oracle_ai_data_platform_fusion_bundle = [
  "py.typed",
  # Content packs ship as package data. The directory uses an underscore
  # (Python identifier convention) even though pack `id:` values use dashes.
  # See v2 plan §6.3 / ADR-0022 and docs/features/v2-phase-1-content-pack-schema/plan.md ("Resolved discrepancies").
  "content_packs/**/*.yaml",
  "content_packs/**/*.yml",
  "content_packs/**/*.sql",
  "content_packs/**/*.bar",
  "content_packs/**/README.md",
  # JSON Schema artifacts exported from Pydantic models (see schema/medallion_pack.py, schema/dashboard_pack.py).
  "*.schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: requires live Fusion pod / AIDP workspace / OAC instance (gated by AIDP_FUSION_BUNDLE_INTEGRATION=1)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["E501"]
